--- a/app/package.json
+++ b/app/package.json
@@ -9,12 +9,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "async": "^0.9.0",
     "commander": "^2.2.0",
     "dateformat": "^1.0.8-1.2.3",
+    "digitalocean-api": "^0.1.1",
     "fast-csv": "^0.4.1",
     "lodash": "^2.4.1",
+    "nodemailer": "^1.0.3",
     "redis": "^0.11.0",
     "sanitize-filename": "^1.0.1",
+    "ssh2": "^0.3.4",
     "walk": "^2.3.3",
     "winston": "^0.7.3"
   }
