Added Golang to vagrant provisioning and sample go app

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ app/parse-test/node_modules/*
 app/mono-node/logs/*
 app/ios-passkit-express/keys/*
 app/ios-passkit-express/node_modules/*
+go/pkg/*
+go/bin/*
